sw25red: clean-up (WIP)